--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,16 @@
 # Site navigation links
 
+- title: Home
+  url: /
+
+- title: Blog
+  url: /blog/
+
 - title: Projects
   url: /projects/
+
+- title: About
+  url: /about/
+
+- title: Moon
+  url: http:/
